# nix-gh-ci

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile  om.yaml  rust-toolchain.toml
.github/workflows/: ci-gh-action.yml  ci-nix.yml  ci-nixbuild.yml  ci-ssh-builder.yml  ci-ssh-cachix-deploy-with-fh-cache.yml  ci-ssh-cachix-deploy.yml  update-flake-lock.yml
nix/modules/: devshell.nix  formatting.nix  rust.nix  template.nix
src/: main.rs
