[package]
 authors = ["Nikolai Schimke <nikolai@missionctrl.dev>"]
 edition = "2021"
 # If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
 description = "A simple Rust project using Nix"
 name        = "rust-nix-gh-ci-example"
 version     = "0.1.0"

 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 clap = { version = "4.5", features = ["derive"] }
